--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+
+
+{% block body %}
+{% endblock body %}
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Schedule Tracker</title>
+    <title>  {%block title%} {%endblock title%}| ICE CREAM PARLOUR</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -47,7 +54,7 @@
 
 
     </body>
-
+{%block body%} {%endblock body%}
 
 
 </html>
