--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,4 @@
-{% extends "base.html" %}
 
-
-{% block body %}
-{% endblock body %}
 
 
 <!doctype html>
@@ -34,7 +30,7 @@
                   SERVICES
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">POPCORNS</a></li>
+                  <li><a class="dropdown-item" href="/services">POPCORNS</a></li>
                   <li><a class="dropdown-item" href="#">SOFTY</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">OTHER FLAVOURS</a></li>
@@ -51,10 +47,10 @@
           </div>
         </div>
       </nav>
+    </nav>
 
-
-    </body>
 {%block body%} {%endblock body%}
+</body>
 
 
 </html>
