--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://picsum.photos/1600/600?ICECREAM
-            " class="d-block w-100" alt="...">
+            <img src="/static/beach.jfif" class="d-block w-100" alt"...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
